# pysrvf

./: .gitignore  README.md  setup.py
Data/1d/: hc_FA_data.npy  two_bumps.mat  two_bumps.npy
Data/2d/: misc.npy
Data/3d/: sine_curves.npy
data/: Xdouble_bump_qmean.mat
data/1d/: mat_to_npy.py  npy_to_mat.py
data/1d/sin_cos_waves/: bundle1.npy  bundle10.npy  bundle2.npy  bundle3.npy  bundle4.npy  bundle5.npy  bundle6.npy  bundle7.npy  bundle8.npy  bundle9.npy
data/2d/: dog_curves.npy  ellipses.npy
data/3d/: bundle_3d_10_curves.npy  bundle_3d_2_1.npy  generate_3d_data.py
pysrvf/: DP_Shape_Match_SRVF_nDim  __init__.py  bump_testing.py  compute_geodesic.py  eigen_recon.py  fiber_test.py  fiber_test_mean.py  find_mean_shape.py  form_basis_utils.py  generic_utils.py  geodesic_utils.py  main_mean.py  matlab_tests.py  mean_computation_examples.py  projectC.py  srvf_utils.py  testing.py  tpca.py  viz.py
pysrvf/DP_Shape_Match_func_nDim/src/: DP_Shape_Match_Coord_nDim.cpp  DP_Shape_Match_SRVF_nDim.cpp  functions.h  shape.cpp  shape.h
pysrvf/synthetic_bundles/: 3d_generator.py
srvf/: compute_geodesic.py  curve_to_q.py  find_mean_shape.py  form_basis_utils.py  generic_utils.py  geodesic_utils.py  get_curve_collection_mean.py  karcher_mean.py  main_mean.py  mean_computation_examples.py  projectC.py  resample_curve.py  test_2d.py  testing.py
srvf/DP_Shape_Match_func_nDim/: CMakeLists.txt
srvf/DP_Shape_Match_func_nDim/src/: functions.cpp
srvf/Data/2d/: square_pair.npy  square_pair2.npy
srvf/Data/2d/DogHorse/: horses.npy
